--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_audio_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_audio_player.html
@@ -1,18 +1,23 @@
 {% load i18n %}
 {% load ndf_tags %}
 
-	<div id="scstyle">
-	 <audio controls="" width="100px" id="audio-player-{{audio_obj.pk}}">
+<div id="scstyle">
 	 {% if 'audio' in audio_obj.if_file.mime_type %}
+	 <audio controls="" width="100px" id="audio-player-{{audio_obj.pk}}">
 	 <source src="{{MEDIA_URL}}{{audio_obj.if_file.original.relurl}}" type="audio/mp3"/>
 	 </audio>
  	<!-- Transcript -->
-    <form class="trans-form">
-    <input align="right" id="toggler" type="checkbox"/>
-    <label class="toggle-me" for="toggler">Transcript <img class="arrow-toggle"><i class="fa fa-chevron-right" aria-hidden="true"></i></img></label>
-    <div class="transcript">
-       
-    </div>
+    {% get_relation_value audio_obj.pk 'has_transcript' as transcript_rel %}
+	{% if transcript_rel %}
+
+	<form class="trans-form">
+		<input align="right" id="toggler" type="checkbox" />
+			<label class="toggle-me" for="toggler">Transcript</label>
+		<div class="transcript">
+			<object type="text/html" data="{{MEDIA_URL}}{{transcript_rel.grel_node.if_file.original.relurl}}" style="width:100%; height:100%">
+			</object>
+		</div>
 	</form>
+	{% endif %}
 </div>
 	{% endif %}
