--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -61,15 +61,20 @@
                             <!-- <a href="#group_blog">Blog</a> -->
                         </li>
                        <li>
-                            <a href="{% url 'course_pages' group_id %}" {% if title == 'course_pages' %}class="selected"{% endif %}>Activity-Sheets</a>
+                            <a href="{% url 'course_pages' group_id %}" {% if title == 'course_pages' %}class="selected"{% endif %}>Activities</a>
                         </li>
                         <li>
                             <a href="{% url 'asset_list' group_id %}" {% if title == 'asset_list' or title == 'asset_detail' or title == 'asset_content_detail'%}class="selected"{% endif %}>Assets</a>
                         </li>
                         <li >
+                            <a href="https://103.36.84.149/oat/#/" {% if title == 'Assessments' %}class="selected"{% endif %}>Assessments</a>
+                            <!-- <a href="#group_blog">Blog</a> -->
+                        </li>
+                        <li >
                             <a href="{% url 'course_notebook' group_id %}" {% if title == 'notebook' %}class="selected"{% endif %}>Notebook</a>
                             <!-- <a href="#group_blog">Blog</a> -->
                         </li>
+                        
 <!--                         <li>
                             <a href="#group_overview" class="selected">Overview</a>
                         </li><li>
