--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -853,7 +853,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0049667a', e
             // //font-size: 13px;
             letter-spacing: 0.3px;
             overflow: hidden;
-            display: none;
+            //display: none;
         }
     }
 }
