--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -32,7 +32,7 @@
                         </span>
                         <ul id="course-settings-drop" class="f-dropdown" data-dropdown-content aria-hidden="true" tabindex="-1">
                         <li>
-                                <a data-reveal-id="manage_users_modal" href="{% url 'manage_users' group_id %}">Manage Members</a> 
+                                <a data-reveal-id="manage_users_modal" href="{% url 'manage_users' group_id %}"  class="fi-torsos"> Manage Users</a> 
                                 <div id="manage_users_modal" class="reveal-modal large" data-reveal style="position:absolute;"> 
                                     <div id="group_drawer">
                                     {% include "ndf/widget_user_search.html" with subscription_status=True %}
@@ -43,10 +43,7 @@
                         <li>
                             <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}?cnode_id={{group_id}}" class="fi-volume"> Announce</a>
                         </li>
-
-
                         </ul>
-
                     </div>
                 </div>
             </div>
