--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
@@ -1,5 +1,13 @@
 {% load i18n %}
 {% load cache %}
+<style type="text/css">
+  .fi-x{
+    color: red;
+  }
+  .fi-check{
+    color: green;
+  }
+</style>
 <div class="batch_div">
   <div class="row">
     <div style="text-align: center;">
@@ -82,18 +90,18 @@
                   var mem_cell = data_row.insertCell(2);
                   var admin_cell = data_row.insertCell(3);
                   if(tuple_obj[2]){
-                    mem_cell.innerHTML = "<a id='unsubscribe_from_grp' data-user-id='"+tuple_obj[0]+"'>Remove</a>"
+                    mem_cell.innerHTML = "<i class='fi-x'></i><a id='unsubscribe_from_grp' title='Click here to Remove this user' data-user-id='"+tuple_obj[0]+"'> Remove</a>"
                   }
                   else{
-                    mem_cell.innerHTML = "<a id='subscribe_to_grp' data-user-id='"+tuple_obj[0]+"'>Add</a>"
+                    mem_cell.innerHTML = "<i class='fi-check'></i><a id='subscribe_to_grp'  title='Click here to Add this user' data-user-id='"+tuple_obj[0]+"'> Add</a>"
                   }
 
                   // Add as Admin
                   if(tuple_obj[3]){
-                    admin_cell.innerHTML = "<a id='unsubscribe_from_grp' data-user-id='"+tuple_obj[0]+"' data-user-admin='True'>Remove</a>"
+                    admin_cell.innerHTML = "<i class='fi-x'></i><a id='unsubscribe_from_grp' title='Click here to Remove this user' data-user-id='"+tuple_obj[0]+"' data-user-admin='True'> Remove</a>"
                   }
                   else{
-                    admin_cell.innerHTML = "<a id='subscribe_to_grp' data-user-id='"+tuple_obj[0]+"' data-user-admin='True'>Add</a>"
+                    admin_cell.innerHTML = "<i class='fi-check'></i><a id='subscribe_to_grp' title='Click here to Add this user' data-user-id='"+tuple_obj[0]+"' data-user-admin='True'> Add</a>"
                   }
 
                 {% endif %}
@@ -151,6 +159,8 @@
                         $(this)
                             .attr("id", "unsubscribe_from_grp")
                             .text("Remove")
+                            .attr("title", "Click here to Remove this user")
+                            .prev('i').addClass('fi-x').removeClass('fi-check')
                     }
 
                 }
@@ -194,6 +204,8 @@
                             $(this)
                                 .text("Add")
                                 .attr("id", "subscribe_to_grp")
+                                .attr("title", "Click here to Add this user")
+                                .prev('i').addClass('fi-check').removeClass('fi-x')
                         }
                     }
                 }
