--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/widget_user_search.html
@@ -9,16 +9,16 @@
   }
 </style>
 <div class="batch_div">
-  <div class="row">
-    <div style="text-align: center;">
-      <div class="small-4 columns end" style="display: inline-block;  ">
-        <h5>{% trans 'Search User by name : ' %}</h5>
-      </div>
-      <div class="small-4 columns end" style="display: inline-block;  ">
-        <input type="text" class="student_name small-6 columns" value="" placeholder="Enter atleast 3 letters to search">
-        <input type="button" class="tiny radius button search_stud_btn" value="Find Students" />
-      </div>
+  <div class="row" style="text-align: center;">
+    <div class="small-4 columns end" style="display: inline-block;">
+      <h5>{% trans 'Search User by name : ' %}</h5>
     </div>
+    <div class="small-4 columns end" style="display: inline-block;">
+      <input type="text" class="student_name small-6 columns" value="" placeholder="Enter atleast 3 letters to search">
+    </div>
+  </div>
+  <div class="row">
+        <input type="button" class="radius button search_stud_btn asset-save-button" style="width: 8rem;"value="Find Students" />
   </div>
 </div>
   <div id="student_count_div"></div>
