assessments and ost jhapp added

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/jhapp_list.html
@@ -7,9 +7,16 @@
             <div class="row app_row">
                 <div style="width: 65%" class="app_desc">
                     <h3>Assessments</h3>
-                        <input type="text" placeholder="" class="required" id ="paste-area-assessment"  />
+                <input type="text" placeholder="" class="required" id ="paste-area-assessment"  />
 
                     <button type="button"  class="right orange-button" id="insert_assessment" >Insert Assessment</button>
+                </div>
+                <div style="width: 65%" class="app_desc">
+                    <h3>Open Story Tool</h3>
+                        <input type="text" placeholder="" class="required" id ="paste-ost-gallery"  />
+                        <input type="text" placeholder="" class="required" id ="paste-ost-captions"  />
+
+                    <button type="button"  class="right orange-button" id="insert_ost" >Insert Assessment</button>
                 </div>
             </div>
         </div>
